--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Promptastic</string>
+
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="empty_view_text">Hey, you have not created a script yet!</string>
 </resources>
