--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,12 @@
     <string name="login_button_text">Login</string>
     <string name="login_new_user">Are you new here? </string>
     <string name="login_sign_up"> Sign Up!</string>
+
+    <string name="navigation_scripts">Scripts</string>
+    <string name="navigation_settings">Settings</string>
+    <string name="navigation_about">About</string>
+    <string name="navigation_sign_out">Sign Out</string>
+
+    <string name="open">Open</string>
+    <string name="close">Close</string>
 </resources>
