feat: Added Sign Up flow

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,8 +9,14 @@
     <string name="edit_text_login_user_name">E-mail</string>
     <string name="edit_text_login_password">Password</string>
     <string name="login_button_text">Login</string>
-    <string name="login_new_user">Are you new here? </string>
-    <string name="login_sign_up"> Sign Up!</string>
+    <string name="login_new_user">Are you new here?&#032;</string>
+    <string name="login_sign_up">&#032;Sign Up!</string>
+    <string name="login_fail">Login Failure. Please, try again</string>
+
+    <string name="signup_email_hint">First, type an e-mail address</string>
+    <string name="signup_password_hint">Then, a password</string>
+    <string name="signup_button_text">Sign Up</string>
+    <string name="signup_fail">Sign Up Failure. Please, try again</string>
 
     <string name="navigation_scripts">Scripts</string>
     <string name="navigation_settings">Settings</string>
