--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,8 @@
     <string name="login_new_user">Are you new here?&#032;</string>
     <string name="login_sign_up">&#032;Sign Up!</string>
     <string name="login_fail">Login Failure. Please, try again</string>
+    <string name="login_username_error">Type your e-mail address</string>
+    <string name="login_password_error">Type your password</string>
 
     <string name="signup_email_hint">First, type an e-mail address</string>
     <string name="signup_password_hint">Then, a password</string>
