--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,59 @@
 
     <string name="play_script">Play Script</string>
     <string name="edit_script">Edit Script</string>
+
+    <!--Settings-->
+
+    <string name="pref_title_background">Background Theme</string>
+
+    <string-array name="pref_background_entries">
+        <item>Dark</item>
+        <item>Light</item>
+    </string-array>
+
+    <string-array name="pref_background_entry_values">
+        <item>dark</item>
+        <item>light</item>
+    </string-array>
+
+    <string name="title_activity_settings">Settings</string>
+
+    <string name="pref_title_text_speed">Text Speed</string>
+    <string name="pref_default_display_name">Normal</string>
+
+    <string-array name="text_speed_list_preference_entries">
+        <item>Very Slow</item>
+        <item>Slow</item>
+        <item>Normal</item>
+        <item>Fast</item>
+        <item>Very Fast</item>
+    </string-array>
+
+    <string-array name="text_speed_list_preference_entry_values">
+        <item>-2</item>
+        <item>1</item>
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+    </string-array>
+
+
+    <string name="pref_title_text_color">Text Color</string>
+
+    <string-array name="text_color_list_preference_entries">
+        <item>White</item>
+        <item>Red</item>
+        <item>Black</item>
+        <item>Blue</item>
+        <item>Yellow</item>
+    </string-array>
+
+    <string-array name="text_color_list_preference_entry_values">
+        <item>white</item>
+        <item>red</item>
+        <item>black</item>
+        <item>blue</item>
+        <item>yellow</item>
+    </string-array>
+
 </resources>
