--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Promptastic</string>
+    <string name="app_version">v1.0.0</string>
 
     <!-- Script List screen-->
     <string name="empty_view_text">Hey, you have not created a script yet!</string>
@@ -42,6 +43,8 @@
     <string name="play_script_dialog_cancel">Cancel</string>
 
     <string name="play_script_category" translatable="false">play_script_category</string>
+
+    <string name="open_source_licenses">Open Source Licenses</string>
 
     <!--Settings-->
 
