fix: fixed warning alerts to layouts

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,8 @@
     <string name="signup_password_hint">Finally, a password</string>
     <string name="signup_button_text">Sign Up</string>
     <string name="signup_fail">Sign Up Failure. Please, try again</string>
+    <string name="signup_good">Good!!!</string>
+    <string name="signup_description">To sign up, follow the instructions below</string>
 
     <string name="navigation_scripts">Scripts</string>
     <string name="navigation_settings">Settings</string>
@@ -101,4 +103,6 @@
         <item>48.0</item>
         <item>54.0</item>
     </string-array>
+
+    <string name="promptastic_logo_content_description">Promptastic Logo</string>
 </resources>
