feat: made accessibility changes - content descriptions and contrast issues

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,6 +43,7 @@
     <string name="play_script">Play Script</string>
     <string name="edit_script">Edit Script</string>
     <string name="delete_script">Delete Script</string>
+    <string name="create_script">Create Script</string>
 
     <string name="play_script_dialog_message">Would you like to play the script again?</string>
     <string name="play_script_dialog_ok">OK</string>
