--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -112,4 +112,6 @@
     <string name="promptastic_logo_content_description">Promptastic Logo</string>
     <string name="appwidget_text">EXAMPLE</string>
     <string name="add_widget">Add widget</string>
+    <string name="widget_no_script">Your last played script will be displayed here.</string>
+    <string name="widget_last_played_script">Your last played script was:</string>
 </resources>
