--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -115,4 +115,5 @@
     <string name="add_widget">Add widget</string>
     <string name="widget_no_script">Your last played script will be displayed here.</string>
     <string name="widget_last_played_script">Your last played script was:</string>
+    <string name="empty_frag_text">Please, select a script at the left</string>
 </resources>
